fix: card ui on mobile and testx scroll

--- a/components/bottom-sheet/bottom-sheet.module.scss
+++ b/components/bottom-sheet/bottom-sheet.module.scss
@@ -1,28 +1,20 @@
 @use "sass:map";
 @import "styles/variables.scss";
 
-#bottom-sheet {
-  border: 1px solid red;
-}
-
 .empty_space {
   height: 7px;
 }
 .inner {
-  // border: 1px solid red;
+  border: 1px solid red;
   width: 100%;
   height: 100%;
   background-color: map.get($--greys, "100");
 
-  ::-webkit-scrollbar {
-    display: none;
-  }
-  -ms-overflow-style: none; /* 인터넷 익스플로러 */
-  scrollbar-width: none; /* 파이어폭스 */
-}
-
-.status-full {
-  // height: calc(100vh - 87px);
+  // ::-webkit-scrollbar {
+  //   display: none;
+  // }
+  // -ms-overflow-style: none; /* 인터넷 익스플로러 */
+  // scrollbar-width: none; /* 파이어폭스 */
 }
 
 .floating-button {
