--- a/components/card/Bakery.module.scss
+++ b/components/card/Bakery.module.scss
@@ -213,12 +213,20 @@
           }
         }
       }
+      
       .bottom {
         // border: 1px solid blue;
         display: flex;
         justify-content: flex-start;
         align-items: center;
         gap: 0.4rem;
+
+        .subway_station_wrapper {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          gap: 0.3rem;
+        }
   
         .subway_line {
           padding: 1px 6px 0;
@@ -233,7 +241,6 @@
           align-items: center;
         }
         .subway_station {
-          padding-top: 1px;
           color: #222;
           font-size: 14px;
         }
